# note

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  WORKSPACE
cargo/: BUILD  Cargo.toml  crates.bzl
cargo/remote/: aho-corasick-0.6.8.BUILD  cfg-if-0.1.6.BUILD  docopt-1.0.1.BUILD  lazy_static-1.1.0.BUILD  libc-0.2.43.BUILD  memchr-2.1.0.BUILD  proc-macro2-0.4.20.BUILD  quote-0.6.8.BUILD  redox_syscall-0.1.40.BUILD  redox_termios-0.1.1.BUILD  regex-1.0.5.BUILD  regex-syntax-0.6.2.BUILD  serde-1.0.80.BUILD  serde_derive-1.0.80.BUILD  strsim-0.7.0.BUILD  syn-0.15.14.BUILD  termion-1.5.1.BUILD  text_io-0.1.7.BUILD  thread_local-0.3.6.BUILD  ucd-util-0.1.1.BUILD  unicode-xid-0.1.0.BUILD  utf8-ranges-1.0.1.BUILD  version_check-0.1.5.BUILD
scripts/: install.sh
src/: BUILD.bazel  db.rs  lib.rs  main.rs  util.rs
src/cmd/: BUILD.bazel  add.rs  cat.rs  cmd.rs  edit.rs  ls.rs  mod.rs  rm.rs
