[package]
name = "note"
version = "0.1.3"
authors = ["Sean Walsh <sean@swalsh.org>"]

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
docopt = "1.0.1"
serde = "1.0.80"
serde_derive = "1.0.80"
termion = "1.5.1"
text_io = "0.1.7"

[raze]
genmode = "Remote"
workspace_path = "//cargo"

[raze.crates.lazy_static.'1.1.0']
additional_flags = [
    "--cfg=lazy_static_inline_impl",
]

[raze.crates.proc-macro2.'0.4.20']
additional_flags = [
    "--cfg use_proc_macro",
]
