package(default_visibility = ["//visibility:public"])
load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary", "rust_library")

rust_library(
  name = "util",
  srcs = [":util.rs"],
)

rust_binary(
  name = "note",
  srcs = [":main.rs"],
  deps = [
    "//cargo:docopt",
    "//cargo:serde",
    "//cargo:serde_derive",
    "//src/cmd",
    ":util",
  ],
)
